# aws-console-open

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
src/: main.rs
